# AtomSCF

./: .gitignore  README.md  assignment_2-3.tex  pyproject.toml  pytest.ini
.github/workflows/: docs.yml
.workenv/progress/: session_summary_2025-10-04.md  uhf_implementation.md
docs/: .gitignore  Makefile  NUMERICS.md  PZ81.md  README.md  REFERENCES.md
docs/source/: conf.py  index.rst  introduction.rst
docs/source/algorithm/: density_functional.rst  hartree_fock.rst  (+2 more)
examples/: compare_c_to_nist_lsd.py  run_atom.py  run_c_lsda_pz81.py  run_c_lsda_pz81_log.py  run_c_lsda_vwn.py  run_c_lsda_vwn_log.py  run_c_lsda_vwn_log_numerov.py  run_h_1s_fd.py  test_carbon_uhf.py  test_uhf.py  validate_numerov_frozen.py
examples/legacy/: README.md  benchmark_methods_carbon.py  compare_c_to_nist_lsd_vwn.py  quick_atom_test.py  run_c_lsda_vwn_transformed.py  verify_carbon_screened_potential.py  verify_hydrogen_transformed.py
scripts/: extract_results.py  plot_comparisons.py  run_all.sh  run_c_calculations.sh  run_extra_atoms.sh  run_h_calculations.sh
src/atomscf/: __init__.py  grid.py  hartree.py  io.py  nist_reference_data.py  numerov.py  occupations.py  operator.py  refdata.py  scf.py  scf_hf.py  shooting.py  utils.py
test_results/: Al_lsda.json  C_lsda.json  C_rhf.json  C_uhf.json  H_lsda.json  H_uhf.json  He_lsda.json  Li_lsda.json
tests/: test_angular.py  test_exchange.py  test_fd5_aux_loggrid_hydrogen.py  test_grid.py  test_hf_minimal_h.py  test_hydrogen_fd.py  test_scf_lsda_pz81.py  test_scf_lsda_x_c.py  test_scf_lsda_x_h.py  test_slater.py  test_vwn_deriv.py
(+21 files in other folders)
