[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atomscf"
version = "0.1.0"
description = "教学用原子自旋极化 HF 与 LSDA-DFT（径向一维）最小实现"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "Course Project", email = "noreply@example.com" }
]
dependencies = [
  "numpy>=1.20",
]

[project.optional-dependencies]
dev = [
  "pytest>=7",
]
docs = [
  "sphinx>=7.0",
  "sphinx-rtd-theme>=2.0",
  "sphinx-autodoc-typehints>=1.24",
  "myst-parser>=2.0",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["atomscf", "atomscf.xc", "atomscf.hf"]

